--- a/server/example/index.html
+++ b/server/example/index.html
@@ -7,8 +7,8 @@
   <body>
   <h1>Example Website</h1>
   <h3>TestNet</h3>
-  <script src="http://localhost:81/account/jamesbachina"></script> 
+  <!--<script src="http://localhost:81/account/jamesbachina"></script>-->
   <h3>Production</h3>
-  <!--<script src="http://eosidenticons.com/account/jamesbachini"></script> -->
+  <script src="http://eosidenticons.com/account/jamesbachini"></script>
   </body>
 </html>
