--- a/server/example/index.html
+++ b/server/example/index.html
@@ -9,6 +9,6 @@
   <h3>TestNet</h3>
   <!--<script src="http://localhost:81/account/jamesbachina"></script>-->
   <h3>Production</h3>
-  <script src="http://eosidenticons.com/account/jamesbachini"></script>
+  <script src="http://eosidenticons.com/account/johnsim"></script>
   </body>
 </html>
